# PrismLauncher

./: .arcconfig  .clang-format  .clang-tidy  .editorconfig  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .markdownlint.yaml  .markdownlintignore  .qmllint.ini  .travis.yml  0100A3D008C5C000_v0.xci.torrent  AppSettings.cpp  AppSettings.h  AppVersion.cpp  AppVersion.h  BUILD.MD  BUILD.md  BuildConfig.cpp.in  BuildConfig.h  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.md  CategorizedProxyModel.cpp  CategorizedProxyModel.h  CategorizedView.cpp  CategorizedView.h  CategorizedViewCategory.cpp  CategorizedViewCategory.h  Config.cpp.in  Config.h  Group.cpp  Group.h  GroupView.cpp  GroupView.h  GroupedProxyModel.cpp  (+44 more)
api/gui/: CMakeLists.txt  DesktopServices.cpp  DesktopServices.h  SkinUtils.cpp  SkinUtils.h
api/logic/: BaseConfigObject.h  BaseInstaller.cpp  BaseInstaller.h  BaseInstance.cpp  BaseInstance.h  BaseInstanceProvider.h  BaseVersion.h  BaseVersionList.cpp  BaseVersionList.h  CMakeLists.txt  Commandline.cpp  Commandline.h  DefaultVariable.h  Env.cpp  Env.h  Exception.h  FileSystem.cpp  (+37 more)
application/: BuildConfig.cpp.in  BuildConfig.h  CMakeLists.txt  CertWorkaround.cpp  CertWorkaround.h  ColorCache.cpp  ColorCache.h  Colors.cpp  Colors.h  ColumnResizer.cpp  ColumnResizer.h  ConsoleWindow.cpp  ConsoleWindow.h  FtbListModel.cpp  FtbListModel.h  GuiUtil.cpp  GuiUtil.h  HoeDown.h  InstancePageProvider.h  InstanceProxyModel.cpp  InstanceProxyModel.h  InstanceWindow.cpp  InstanceWindow.h  JavaCommon.cpp  JavaCommon.h  KonamiCode.cpp  KonamiCode.h  LaunchController.cpp  LaunchController.h  LaunchInteraction.cpp  LaunchInteraction.h  MainWindow.cpp  MainWindow.h  MultiMC.cpp  MultiMC.h  NagUtils.cpp  Platform_Other.cpp  Platform_X11.cpp  SettingsUI.cpp  SettingsUI.h  (+8 more)
backend/: BaseInstance.cpp  BaseInstance.h  BaseInstance_p.h  BaseUpdate.cpp  BaseUpdate.h  CMakeLists.txt  IconListModel.cpp  InstanceFactory.cpp  InstanceFactory.h  InstanceVersion.cpp  InstanceVersion.h  LegacyForge.h  LegacyInstance.cpp  LegacyInstance.h  LegacyInstance_p.h  LegacyUpdate.cpp  LegacyUpdate.h  MinecraftProcess.cpp  MinecraftProcess.h  MinecraftVersion.cpp  MinecraftVersion.h  Mod.h  ModList.cpp  ModList.h  NostalgiaInstance.h  OneSixAssets.cpp  OneSixAssets.h  OneSixInstance.cpp  OneSixInstance.h  OneSixInstance_p.h  OneSixUpdate.cpp  OneSixUpdate.h  OneSixVersion.cpp  OneSixVersion.h  VersionFactory.cpp  VersionFactory.h  libmmc_config.h
buildconfig/: BuildConfig.cpp.in  BuildConfig.h  CMakeLists.txt
bundle/: CMakeLists.txt
launcher/: Application.cpp  Application.h  ApplicationMessage.cpp  ApplicationMessage.h  BaseInstaller.cpp  BaseInstaller.h  BaseInstance.cpp  BaseInstance.h  BaseVersion.h  BaseVersionList.cpp  BaseVersionList.h  CMakeLists.txt  CleanEnvironment.cpp  CleanEnvironment.h  ColorCache.cpp  ColorCache.h  ColumnResizer.cpp  ColumnResizer.h  Commandline.cpp  Commandline.h  DataMigrationTask.cpp  DataMigrationTask.h  DefaultVariable.h  DesktopServices.cpp  DesktopServices.h  Env.cpp  Env.h  Exception.h  ExponentialSeries.h  FastFileIconProvider.cpp  FastFileIconProvider.h  FileIgnoreProxy.cpp  FileIgnoreProxy.h  FileSystem.cpp  FileSystem.h  FileSystem_test.cpp  Filter.cpp  Filter.h  Flatpak.cpp  Flatpak.h  (+99 more)
libgroupview/: CMakeLists.txt
libinstance/: CMakeLists.txt
libmultimc/: CMakeLists.txt
libsettings/: CMakeLists.txt
libutil/: CMakeLists.txt
logic/: AbstractCommonModel.h  BaseConfigObject.cpp  BaseExternalTool.cpp  BaseExternalTool.h  BaseInstaller.cpp  BaseInstaller.h  BaseInstance.cpp  BaseInstance.h  BaseInstance_p.h  BaseLauncher.cpp  BaseLauncher.h  BaseProcess.cpp  BaseProcess.h  BaseUpdate.cpp  BaseUpdate.h  BaseVersion.h  BaseVersionList.cpp  BaseVersionList.h  CMakeLists.txt  Commandline.h  DefaultVariable.h  DerpFTBInstance.cpp  DerpFTBInstance.h  DerpInstance.cpp  DerpInstance.h  DerpInstance_p.h  DerpLibrary.cpp  DerpLibrary.h  DerpRule.cpp  DerpRule.h  DerpUpdate.cpp  DerpUpdate.h  DerpVersion.cpp  DerpVersion.h  DerpVersionBuilder.cpp  DerpVersionBuilder.h  DesktopServices.h  EnabledItemFilter.cpp  EnabledItemFilter.h  Env.cpp  (+101 more)
mmc_updater/: CMakeLists.txt
notsecrets/: CMakeLists.txt  Launcher.manifest  README.md  Secrets.cpp  Secrets.h  genicons.sh  launcher.rc  logo.qrc
program_info/: App.entitlements  AppxManifest.xml  CMakeLists.txt  LICENSE  Launcher.icns  README.md  genicons.sh  macos.qt.conf  modrinth-mrpack-mime.xml  org.polymc.PolyMC.desktop.in  org.polymc.PolyMC.metainfo.xml  org.polymc.PolyMC.metainfo.xml.in  org.prismlauncher.PrismLauncher.desktop.in  org.prismlauncher.PrismLauncher.metainfo.xml.in  polymc.6.txt  polymc.desktop  polymc.desktop.in  polymc.icns  polymc.manifest  polymc.manifest.in  polymc.qrc  polymc.rc  polymc.rc.in  portable.txt  prismlauncher.6.scd  prismlauncher.AppInstaller  prismlauncher.icns  prismlauncher.manifest.in  prismlauncher.qrc  prismlauncher.rc.in  win_install.nsi  win_install.nsi.in
quazip/: CMakeLists.txt  JlCompress.cpp  qioapi.cpp  quaziodevice.cpp  quazipnewinfo.cpp  quazipnewinfo.h  zip.c
tests/: CMakeLists.txt  CatPack_test.cpp  DataPackParse_test.cpp  DummyResourceAPI.h  FileSystem_test.cpp  GZip_test.cpp  GradleSpecifier_test.cpp  INIFile_test.cpp  Index_test.cpp  JavaVersion_test.cpp  Library_test.cpp  MetaComponentParse_test.cpp  MojangVersionFormat_test.cpp  PackageManifest_test.cpp  Packwiz_test.cpp  ParseUtils_test.cpp  ResourceFolderModel_test.cpp  ResourceModel_test.cpp  ResourcePackParse_test.cpp  ShaderPackParse_test.cpp  Task_test.cpp  TestUtil.h  TexturePackParse_test.cpp  Time_test.cpp  Version_test.cpp  WorldSaveParse_test.cpp  copy_tests.cmake  test_config.h.in  tst_BaseWonkoEntityLocalLoadTask.cpp  tst_BaseWonkoEntityRemoteLoadTask.cpp  tst_DownloadTask.cpp  tst_DownloadUpdateTask.cpp  tst_FileSystem.cpp  tst_GZip.cpp  tst_JavaVersion.cpp  tst_Library.cpp  tst_ModList.cpp  tst_MojangVersionFormat.cpp  tst_ParseUtils.cpp  tst_Resource.cpp  (+9 more)
translations/: CMakeLists.txt  mmc_de.ts  mmc_de_DE.ts  mmc_fr.ts  mmc_fr.ts.txt
(+3571 files in other folders)
